src/includes/_forms.scss
/* ... */
a.button {
    &:hover, &:focus {
        text-decoration: none;
    }
}
select {
    cursor: pointer;

    &.full-width {
        width: 100%;
    }
    // Single select
    &:not([multiple]) {
        // Arrow - SVG background image
        background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='24' height='24' fill='%2324292f'><path d='M7.406 8.578l4.594 4.594 4.594-4.594 1.406 1.406-6 6-6-6z'></path></svg>");
        background-size: 1em;
        background-position: calc(100% - var(--padding-buttons)) 50%;
        background-repeat: no-repeat;
        padding-right: calc(var(--padding-buttons) * 2 + 1em);

        &:hover, &:focus {
            background-color: var(--color-link-background-hover);
        }

        option {
            background: white;
            /* Not working - some option properties are styled by the OS
            &:first-child {
                padding-top: var(--padding-buttons);
                border-top-left-radius: var(--border-radius-button);
                border-top-right-radius: var(--border-radius-button);
            }

            &:last-child {
                padding-bottom: var(--padding-buttons);
                border-bottom-left-radius: var(--border-radius-button);
                border-bottom-right-radius: var(--border-radius-button);
            }
            */
        }
    }
    // Multiple select
    &[multiple] {
        padding: calc(var(--padding-buttons) * 0.8571) 0;
        overflow: visible auto;
        // Fix height for iOS
        min-height: calc(var(--padding-buttons) * 0.8571 * 2 + 1px + 1.1rem);

        option {
            padding: 2px var(--padding-buttons);
            background-color: transparent;

            &:checked {
                background-color: white;
                border: var(--border-medium);
                border-radius: 1em;
            }

            &:first-child {
                padding-top: 0;
            }

            &:last-child {
                padding-bottom: 0;
            }
        }
    }
}
/*
    Input elements cannot have :before or :after content. 
    So to apply an icon, wrap the element in a <label> tag.
*/
// Icon label (left)
label:not([for])[class^="icon-"], label:not([for])[class*=" icon-"] {

    &:before {
        position: absolute;
        margin: 0 0 0 calc(var(--padding-buttons) + 1px);
        font-size: 1rem;
        color: var(--color-text-light);
        z-index: 1;
    }

    & > input, & > textarea, & > select {
        padding-left: calc(var(--padding-buttons) * 2 + 1rem);
    }

    &:has(>textarea) {
        &:before {
            margin-top: var(--padding-buttons);
        }
    }

    &:has(>select[multiple]) {
        &:before {
            margin-top: var(--padding-buttons);
        }
    }
}
// Icon link (right)
label {
    position: relative;
    display: inline-flex;
    align-items: center;
    font-size: inherit;
    line-height: inherit;
    margin: 0;
    padding: 0;
    cursor: text;
    vertical-align: top; // Needed for wrapped select input[type=submit] etc

    & + a.button {
        vertical-align: top; // Same as label (see above)
    }

    &:has(>input[type="submit"], >select) {
        cursor: pointer;
    }

    &:has(>textarea) {
        width: 100%;
        align-items: flex-start;
    }

    &:has(>input.full-width) {
        width: 100%;
    }

    &:has(>select[multiple]) {
        align-items: flex-start;
    }

    & > input, & > textarea, & > select {
        & + a[class^="icon-"]:empty, & + a[class*=" icon-"]:empty {
            display: inline-flex;
            position: absolute;
            right: calc(var(--padding-buttons) + 1px);
            margin: 0;
            text-decoration: none;
            border-radius: var(--border-radius-button);

            &:before {
                font-size: 1rem;
                color: var(--color-text-light);
                margin: 0;
            }

            &:hover, &:focus {
                text-decoration: none;
            }

            &:hover {

                &:before {
                    color: var(--color-link);
                }
            }
        }

        &:has(+a[class^="icon-"]:empty, +a[class*=" icon-"]:empty) {
            padding-right: calc(var(--padding-buttons) * 2 + 1rem);
        }
    }

    & > textarea {
        & + a[class^="icon-"]:empty, & + a[class*=" icon-"]:empty {
            margin-top: var(--padding-buttons);
        }
    }

    & > select[multiple] {
        & + a[class^="icon-"]:empty, & + a[class*=" icon-"]:empty {
            margin-top: var(--padding-buttons);
        }
    }

    & > select:not([multiple]) {
        &:has(+a[class^="icon-"]:empty, +a[class*=" icon-"]:empty) {
            padding-right: calc(var(--padding-buttons) * 3 + 1rem + 1em);
            background-position-x: calc(100% - 1rem - var(--padding-buttons) * 2);
        }
    }
    // Labels with checkbox and radio buttons inline
    & > :is(input[type="checkbox"], input[type="radio"]) {
        margin-right: 1ch;
    }
}
// Form wrapper
form {
    margin: 0;
}
// Validation
$color-error: rgb(176,16,48);
input, textarea, select {
    &.input-validation-error {
        border-color: transparentize($color-error, 0.5);
        background-color: transparentize($color-error, 0.95) !important;
        outline-color: transparentize($color-error, 0.1);
    }
}
span.field-validation-error {
    color: $color-error;
    font-size: .75rem;
    line-height: normal;
    display: block;
    margin: 0.5em 0 0 0.5em;

    &:before {
        font-family: 'jm-admin' !important;
        content: "\e902";
        display: inline-block;
        margin: 0 0.5em 0 0;
        font-size: .875rem;
        line-height: 1;
        opacity: .8;
    }
}
// Inline position
.validation-inline span.field-validation-error {
    display: inline-block;
}
/* ... */

